Skill Concernの見出しを追加

--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -429,7 +429,7 @@
                                                                             <view clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="696" placeholderIntrinsicHeight="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="ral-Qk-yLK">
                                                                                 <rect key="frame" x="0.0" y="95" width="636" height="0.0"/>
                                                                             </view>
-                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HK7-2k-hNf">
+                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HK7-2k-hNf" userLabel="HowToUse">
                                                                                 <rect key="frame" x="0.0" y="95" width="636" height="51"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L0Q-Mc-ggP">
@@ -475,8 +475,49 @@
                                                                                     <constraint firstItem="L0Q-Mc-ggP" firstAttribute="leading" secondItem="HK7-2k-hNf" secondAttribute="leading" id="n7N-z8-6FP"/>
                                                                                 </constraints>
                                                                             </view>
-                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1g-sR-Nnj" customClass="TroubleSelectView" customModule="Share_Beauty_App" customModuleProvider="target">
+                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1g-sR-Nnj" userLabel="Trouble">
                                                                                 <rect key="frame" x="0.0" y="176" width="636" height="791"/>
+                                                                                <subviews>
+                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="en1-Za-qmT">
+                                                                                        <rect key="frame" x="0.0" y="0.0" width="109.5" height="23"/>
+                                                                                        <subviews>
+                                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Skin Concern" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3l-C7-hXm">
+                                                                                                <rect key="frame" x="0.0" y="0.0" width="109.5" height="21"/>
+                                                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                <nil key="highlightedColor"/>
+                                                                                            </label>
+                                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lY6-27-md3">
+                                                                                                <rect key="frame" x="0.0" y="21" width="109.5" height="2"/>
+                                                                                                <color key="backgroundColor" red="0.85900002720000002" green="0.17100000379999999" blue="0.21899999680000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                                                <constraints>
+                                                                                                    <constraint firstAttribute="height" constant="2" id="e4u-Ep-2uD"/>
+                                                                                                </constraints>
+                                                                                            </view>
+                                                                                        </subviews>
+                                                                                        <constraints>
+                                                                                            <constraint firstAttribute="trailing" secondItem="lY6-27-md3" secondAttribute="trailing" id="0rf-R4-idn"/>
+                                                                                            <constraint firstItem="Z3l-C7-hXm" firstAttribute="leading" secondItem="en1-Za-qmT" secondAttribute="leading" id="1xQ-V3-cRe"/>
+                                                                                            <constraint firstItem="lY6-27-md3" firstAttribute="leading" secondItem="en1-Za-qmT" secondAttribute="leading" id="4zE-qJ-zJ1"/>
+                                                                                            <constraint firstItem="lY6-27-md3" firstAttribute="top" secondItem="Z3l-C7-hXm" secondAttribute="bottom" id="8Gx-DE-FSB"/>
+                                                                                            <constraint firstAttribute="bottom" secondItem="lY6-27-md3" secondAttribute="bottom" id="QEa-OK-Kyh"/>
+                                                                                            <constraint firstItem="Z3l-C7-hXm" firstAttribute="top" secondItem="en1-Za-qmT" secondAttribute="top" id="gsS-zz-RDT"/>
+                                                                                            <constraint firstAttribute="trailing" secondItem="Z3l-C7-hXm" secondAttribute="trailing" id="jSV-fL-P2U"/>
+                                                                                        </constraints>
+                                                                                    </view>
+                                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-Ad-5ei" customClass="TroubleSelectView" customModule="Share_Beauty_App" customModuleProvider="target">
+                                                                                        <rect key="frame" x="0.0" y="33" width="636" height="758"/>
+                                                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                                    </view>
+                                                                                </subviews>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="bottom" secondItem="Mt0-Ad-5ei" secondAttribute="bottom" id="8LG-ZG-Mpx"/>
+                                                                                    <constraint firstAttribute="trailing" secondItem="Mt0-Ad-5ei" secondAttribute="trailing" id="CEs-RF-dx0"/>
+                                                                                    <constraint firstItem="Mt0-Ad-5ei" firstAttribute="leading" secondItem="h1g-sR-Nnj" secondAttribute="leading" id="VRW-YY-scv"/>
+                                                                                    <constraint firstItem="en1-Za-qmT" firstAttribute="top" secondItem="h1g-sR-Nnj" secondAttribute="top" id="c2S-zQ-rML"/>
+                                                                                    <constraint firstItem="en1-Za-qmT" firstAttribute="leading" secondItem="h1g-sR-Nnj" secondAttribute="leading" id="cvu-he-0dv"/>
+                                                                                    <constraint firstItem="Mt0-Ad-5ei" firstAttribute="top" secondItem="en1-Za-qmT" secondAttribute="bottom" constant="10" id="ros-zR-gCn"/>
+                                                                                </constraints>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CbQ-Ai-fK0">
                                                                                 <rect key="frame" x="0.0" y="967" width="636" height="33"/>
@@ -751,7 +792,7 @@
                         <outlet property="mRelationScrollV" destination="IJq-sz-snI" id="N54-uL-aWu"/>
                         <outlet property="mScrollVPinch" destination="wAl-8s-SCs" id="Eo8-UU-pWR"/>
                         <outlet property="mTransitionView" destination="qP3-J2-RYj" id="Vjp-e6-5ua"/>
-                        <outlet property="mTroubleSelectView" destination="h1g-sR-Nnj" id="v8p-ka-lJV"/>
+                        <outlet property="mTroubleSelectView" destination="Mt0-Ad-5ei" id="Ksd-0f-8Nz"/>
                         <outlet property="mTroubleView" destination="RQE-Q2-05k" id="EUq-Sz-3Zk"/>
                         <outlet property="mVBaseFeaturesView" destination="ral-Qk-yLK" id="Tvy-kt-YXy"/>
                         <outlet property="mVBaseIbukiBtn" destination="Wx1-mu-ifn" id="XPi-B8-TxF"/>
