--- a/Share Beauty App/Views/LifeStyleProductView.xib
+++ b/Share Beauty App/Views/LifeStyleProductView.xib
@@ -42,10 +42,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="310" height="108"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UTo-ex-ltw">
-                            <rect key="frame" x="0.0" y="0.0" width="310" height="36"/>
+                            <rect key="frame" x="0.0" y="0.0" width="310" height="0.0"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6rW-Fc-bzf">
-                                    <rect key="frame" x="155" y="0.0" width="0.0" height="36"/>
+                                    <rect key="frame" x="155" y="0.0" width="0.0" height="0.0"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -58,10 +58,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vKA-7Z-IFR">
-                            <rect key="frame" x="0.0" y="36" width="310" height="71"/>
+                            <rect key="frame" x="0.0" y="0.0" width="310" height="107"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" text="" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="15O-Xc-Z9D">
-                                    <rect key="frame" x="20" y="20" width="0.0" height="31"/>
+                                    <rect key="frame" x="20" y="20" width="0.0" height="67"/>
                                     <constraints>
                                         <constraint firstAttribute="width" secondItem="15O-Xc-Z9D" secondAttribute="height" multiplier="1:1" id="QPY-po-5to"/>
                                         <constraint firstAttribute="width" constant="49" id="gv4-4v-MJh"/>
@@ -77,18 +77,15 @@
                                     </variation>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ciQ-Tz-Ox4">
-                                    <rect key="frame" x="40" y="14.5" width="199" height="42"/>
+                                    <rect key="frame" x="40" y="22" width="199" height="63"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="bLN-jz-ILf">
-                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="29"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="29" id="smu-L9-Xlo"/>
-                                            </constraints>
+                                            <rect key="frame" x="0.0" y="0.0" width="0.0" height="63"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="ZIB-zZ-j3t">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="752" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="ZIB-zZ-j3t">
                                             <rect key="frame" x="0.0" y="63" width="0.0" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="7jK-hf-bBJ"/>
@@ -102,7 +99,7 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="bvW-oP-OQX">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="none" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="bvW-oP-OQX">
                                             <rect key="frame" x="0.0" y="63" width="0.0" height="0.0"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="yvJ-DS-TTI"/>
@@ -131,7 +128,7 @@
                                     </constraints>
                                 </view>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kz7-If-yoC" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                    <rect key="frame" x="259" y="20" width="31" height="31"/>
+                                    <rect key="frame" x="259" y="56" width="31" height="31"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="31" id="8eH-LL-V0p"/>
                                         <constraint firstAttribute="width" constant="31" id="a3G-ko-4SB"/>
