--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -475,7 +475,7 @@
                                                                                     <constraint firstItem="L0Q-Mc-ggP" firstAttribute="leading" secondItem="HK7-2k-hNf" secondAttribute="leading" id="n7N-z8-6FP"/>
                                                                                 </constraints>
                                                                             </view>
-                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1g-sR-Nnj" userLabel="Trouble">
+                                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h1g-sR-Nnj" userLabel="Trouble" customClass="ProductDetailSkinConcernView" customModule="Share_Beauty_App" customModuleProvider="target">
                                                                                 <rect key="frame" x="0.0" y="166" width="636" height="801"/>
                                                                                 <subviews>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="en1-Za-qmT">
@@ -505,6 +505,14 @@
                                                                                             <constraint firstAttribute="trailing" secondItem="Z3l-C7-hXm" secondAttribute="trailing" id="jSV-fL-P2U"/>
                                                                                         </constraints>
                                                                                     </view>
+                                                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tse-pJ-1GY">
+                                                                                        <rect key="frame" x="120" y="2" width="15" height="18"/>
+                                                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                                        <state key="normal" backgroundImage="open_line_detail"/>
+                                                                                        <connections>
+                                                                                            <action selector="onTapOpen:" destination="h1g-sR-Nnj" eventType="touchUpInside" id="rYL-5R-pON"/>
+                                                                                        </connections>
+                                                                                    </button>
                                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mt0-Ad-5ei" customClass="TroubleSelectView" customModule="Share_Beauty_App" customModuleProvider="target">
                                                                                         <rect key="frame" x="0.0" y="33" width="636" height="768"/>
                                                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -518,6 +526,10 @@
                                                                                     <constraint firstItem="en1-Za-qmT" firstAttribute="leading" secondItem="h1g-sR-Nnj" secondAttribute="leading" id="cvu-he-0dv"/>
                                                                                     <constraint firstItem="Mt0-Ad-5ei" firstAttribute="top" secondItem="en1-Za-qmT" secondAttribute="bottom" constant="10" id="ros-zR-gCn"/>
                                                                                 </constraints>
+                                                                                <connections>
+                                                                                    <outlet property="mVSkinConcernLabel" destination="en1-Za-qmT" id="SIB-09-deT"/>
+                                                                                    <outlet property="openButton" destination="tse-pJ-1GY" id="L7s-vG-oq0"/>
+                                                                                </connections>
                                                                             </view>
                                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CbQ-Ai-fK0">
                                                                                 <rect key="frame" x="0.0" y="967" width="636" height="33"/>
@@ -803,7 +815,7 @@
                         <outlet property="mVMain" destination="fmO-Po-Pdd" id="kdi-9c-MBS"/>
                         <outlet property="mVRelationProductBase" destination="hBN-OY-8nf" id="MSt-UM-ZGG"/>
                         <outlet property="mVScrollContent" destination="6m6-Dv-mB3" id="Zci-5v-P55"/>
-                        <outlet property="mVSkinConcernLabel" destination="en1-Za-qmT" id="bsN-69-mVZ"/>
+                        <outlet property="mVSkinConcern" destination="h1g-sR-Nnj" id="5tL-Qi-WM7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aaD-mL-MOo" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -817,6 +829,7 @@
         <image name="features_smk_1.png" width="92" height="66"/>
         <image name="features_smk_2.png" width="92" height="66"/>
         <image name="features_smk_3.png" width="92" height="66"/>
+        <image name="open_line_detail" width="15" height="15"/>
         <image name="ss_bg.png" width="997" height="1219"/>
     </resources>
 </document>
