--- a/Share Beauty App/Base.lproj/LuxuryIngredientViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LuxuryIngredientViewController.storyboard
@@ -33,14 +33,14 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSx-Hb-PSG">
                                         <rect key="frame" x="0.0" y="-20" width="1024" height="736"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lx_ingredient.png" translatesAutoresizingMaskIntoConstraints="NO" id="3hJ-YQ-d9Y">
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3hJ-YQ-d9Y">
                                                 <rect key="frame" x="0.0" y="0.0" width="1024" height="746"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="746" id="MQb-eK-C6K"/>
                                                     <constraint firstAttribute="width" constant="1024" id="iZA-cQ-hXj"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="koS-Us-81v">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="koS-Us-81v">
                                                 <rect key="frame" x="714" y="545" width="180" height="47"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <string key="text">Cherry Blossom Leaf
@@ -49,30 +49,28 @@ Sakura Leaf</string>
                                                 <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0O-RB-YFb">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0O-RB-YFb">
                                                 <rect key="frame" x="714" y="360" width="180" height="179"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button" image="lx_ingredient_btn_3.png"/>
                                                 <connections>
                                                     <action selector="showCherryGraphView:" destination="T4m-bh-eTl" eventType="touchUpInside" id="LOY-Vf-mHr"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SkingenecellEnmei" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNk-1m-0v1">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SkingenecellEnmei" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNk-1m-0v1">
                                                 <rect key="frame" x="117" y="306" width="180" height="26"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="ACaslonPro-Regular" family="Adobe Caslon Pro" pointSize="19"/>
                                                 <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hGC-Zl-Iwa">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hGC-Zl-Iwa">
                                                 <rect key="frame" x="117" y="119" width="180" height="179"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button" image="lx_ingredient_btn_1.png"/>
                                                 <connections>
                                                     <action selector="showSubView:" destination="T4m-bh-eTl" eventType="touchUpInside" id="P9q-Ld-Hxa"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9LG-MK-4NV">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9LG-MK-4NV">
                                                 <rect key="frame" x="800" y="306" width="180" height="47"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <string key="text">Angelica Leaf
@@ -81,15 +79,14 @@ Touki Leaf</string>
                                                 <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAF-4J-VSY">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAF-4J-VSY">
                                                 <rect key="frame" x="800" y="119" width="180" height="179"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button" image="lx_ingredient_btn_2.png"/>
                                                 <connections>
                                                     <action selector="showAngelicaGraphView:" destination="T4m-bh-eTl" eventType="touchUpInside" id="HK1-Z9-qWR"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVn-Q3-jmz">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVn-Q3-jmz">
                                                 <rect key="frame" x="510" y="682" width="180" height="47"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <string key="text">Uji Green Tea
@@ -98,10 +95,9 @@ Ujicya</string>
                                                 <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtO-XJ-xOv">
+                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtO-XJ-xOv">
                                                 <rect key="frame" x="510" y="492" width="180" height="179"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" title="Button" image="lx_ingredient_btn_4.png"/>
                                                 <connections>
                                                     <action selector="showGraphView2:" destination="T4m-bh-eTl" eventType="touchUpInside" id="5hy-F5-Kgf"/>
                                                 </connections>
@@ -154,9 +150,14 @@ Ujicya</string>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="mAngelicaBtn" destination="cAF-4J-VSY" id="t9L-XD-5I7"/>
+                        <outlet property="mBGImgV" destination="3hJ-YQ-d9Y" id="gFY-IT-K7n"/>
+                        <outlet property="mCherryBtn" destination="T0O-RB-YFb" id="5sA-Wd-BKb"/>
+                        <outlet property="mGreenTeaBtn" destination="WtO-XJ-xOv" id="EoO-D1-aIm"/>
                         <outlet property="mHeaderView" destination="ttd-B5-Aj5" id="5zI-Rt-5AH"/>
                         <outlet property="mNavigationView" destination="dLt-g0-T3Y" id="iVu-UD-fSx"/>
                         <outlet property="mScrollV" destination="cPZ-HZ-YPi" id="iCl-F8-pFe"/>
+                        <outlet property="mSkingeneceBtn" destination="hGC-Zl-Iwa" id="4XC-QF-Ejm"/>
                         <outlet property="mVContent" destination="PSx-Hb-PSG" id="a0b-RX-qD8"/>
                     </connections>
                 </viewController>
@@ -165,11 +166,4 @@ Ujicya</string>
             <point key="canvasLocation" x="-7437.3046874999991" y="2291.40625"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="lx_ingredient.png" width="1024" height="746"/>
-        <image name="lx_ingredient_btn_1.png" width="300" height="300"/>
-        <image name="lx_ingredient_btn_2.png" width="300" height="300"/>
-        <image name="lx_ingredient_btn_3.png" width="300" height="300"/>
-        <image name="lx_ingredient_btn_4.png" width="300" height="300"/>
-    </resources>
 </document>
